--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,13 +2,12 @@ $v-image-input-color: #2c3e50 !default;
 $v-image-input-color-hover: #4689cd !default;
 $v-image-input-background: #fff !default;
 $v-image-input-background-hover: #eee !default;
-$v-image-input-empty-layout-border-color: $v-image-input-color !default;
 
 $v-image-input-width: 100% !default;
 $v-image-input-height: 100% !default;
 
 $v-image-input-empty-layout-padding: 20px !default;
-$v-image-input-empty-layout-border: 1px solid $v-image-input-empty-layout-border-color !default;
+$v-image-input-empty-layout-border: 1px solid #2c3e50 !default;
 $v-image-input-border-radius: 20px !default;
 $v-image-input-object-fit: fill !default;
 
